# KDSproject

./: CMakeLists.txt  KDS2194.sh  Makefile  examine.c  main.c  mygenerator.c  mygenerator.h  serial_algorythm.c  tester.sh
